--- a/app/views/movie/_form.erb
+++ b/app/views/movie/_form.erb
@@ -1,4 +1,4 @@
-<form action="/results">
+<form action="/results" class="form-wrapper">
   <input type="text" name="q" method="get" placeholder="Enter Movie Title" />
   <button type="search">Search</button>
   <button type="lucky">I'm Feeling Lucky</button>
